Blender crash when enabling OpenSubdiv #52059

Closed
opened 2017-07-14 18:25:47 +02:00 by ¿? · 8 comments

Window 7 64-bit, GTX 770 OC

Hash: 29ec0b1 (Date: 2017-07-11)

When enabling OpenSubdiv, Blender just crashes with: [Error: EXCEPTION_ACCESS_VIOLATION] in the console
Steps to Reproduce: Open the included file, then enable [Use OpenSubdiv] untitled.blend (note: model is nsfw/nude)

Sometimes it works by doing that but if you disable then re-enable OpenSubdiv a few times, it'll crash. It started (and often) crashing on my first try,
I think it crashes more frequently with new-depsgraph enabled but it also happens without it, so that's not a direct factor of the issue.

Window 7 64-bit, GTX 770 OC Hash: 29ec0b1 (Date: 2017-07-11) When enabling OpenSubdiv, Blender just crashes with: [Error: EXCEPTION_ACCESS_VIOLATION] in the console Steps to Reproduce: Open the included file, then enable [Use OpenSubdiv] [untitled.blend](https://archive.blender.org/developer/F667185/untitled.blend) (note: model is nsfw/nude) Sometimes it works by doing that but if you disable then re-enable OpenSubdiv a few times, it'll crash. It started (and often) crashing on my first try, I think it crashes more frequently with new-depsgraph enabled but it also happens without it, so that's not a direct factor of the issue.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ebone

Added subscriber: @Ebone

Added subscriber: @fablefox

Added subscriber: @fablefox

Was crash log generated? Please upload if it does. Thanks.
https://docs.blender.org/manual/en/dev/troubleshooting/crash.html

Also, launch Blender from the command line with -d option and attach as text file here any error printed out in the console (do not paste it directly in comment).

Was crash log generated? Please upload if it does. Thanks. https://docs.blender.org/manual/en/dev/troubleshooting/crash.html Also, launch Blender from the command line with -d option and attach as text file here any error printed out in the console (do not paste it directly in comment).
Author

I never get any crash logs; I'm not sure what -d is supposed to be doing but the only text I can apparently get comes from the command prompt, and since it gets too full to hold everything and doesn't auto-save anything, the text that I can select+copy is limited.
Unless I'm supposed to use it some other way. Here's the log before crash:
log.txt

Here's the log when starting with -d (at least as much as I can get)
available -d.txt

This time, it wouldn't crash whilst enabling/disabling OpenSubdiv, but it did after cycling through level 1-3 with it enabled.

I never get any crash logs; I'm not sure what -d is supposed to be doing but the only text I can apparently get comes from the command prompt, and since it gets too full to hold everything and doesn't auto-save anything, the text that I can select+copy is limited. Unless I'm supposed to use it some other way. Here's the log before crash: [log.txt](https://archive.blender.org/developer/F668207/log.txt) Here's the log when starting with -d (at least as much as I can get) [available -d.txt](https://archive.blender.org/developer/F668208/available_-d.txt) This time, it wouldn't crash whilst enabling/disabling OpenSubdiv, but it did after cycling through level 1-3 with it enabled.
Sergey Sharybin was assigned by Aaron Carlisle 2017-07-17 00:39:55 +02:00

Developer note

The issue is caused by some code in face-varying logic which doesn't handle special cases of non-manifold meshes correctly, causing reading past the array size. Here is a simplified file which demonstrates the issue: untitled_simple.blend.

The issue is visible on Linux when OSD is compiled with ASAN.

Not sure yet whether it's issue in how we order the loops when passing to OSD or if it's an issue on OSD side.

Developer note The issue is caused by some code in face-varying logic which doesn't handle special cases of non-manifold meshes correctly, causing reading past the array size. Here is a simplified file which demonstrates the issue: [untitled_simple.blend](https://archive.blender.org/developer/F680618/untitled_simple.blend). The issue is visible on Linux when OSD is compiled with ASAN. Not sure yet whether it's issue in how we order the loops when passing to OSD or if it's an issue on OSD side.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

OpenSubdiv integration was reworked in 2.8. Is still missing GPU integration, but the root of this crash has been addressed.

Is still not enabled by default for public builds since we are still polishing some remaining things. But this report can be considered solved.

OpenSubdiv integration was reworked in 2.8. Is still missing GPU integration, but the root of this crash has been addressed. Is still not enabled by default for public builds since we are still polishing some remaining things. But this report can be considered solved.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52059
No description provided.